# kv-cache-optimizer

./: .gitignore  C1_KV_Cache_Prefill_Execution_Plan.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: phase1_implementation.md  phase2_implementation.md
experiments/: benchmark_throughput.py  calibrate.py  evaluate_longbench.py  evaluate_passkey.py  evaluate_ruler.py  pareto_analysis.py  profile_energy.py
kvquant/: __init__.py  batched_quant.py  blocked_sparse.py  model_utils.py  nuq.py  prefill_quant.py
kvquant/kernels/: __init__.py  pytorch_fused.py  triton_kernels.py
scripts/: measure_prefill_baseline.py  run_ppl_validation.py  setup_athena.sh
slurm_jobs/: run_baseline.sh  run_calibrate.sh  run_energy.sh  run_longbench.sh  run_ppl_validation.sh  run_throughput.sh
tests/: __init__.py  test_batched_quant.py  test_blocked_sparse.py  test_generation_cache.py  test_model_integration.py  test_prefill_quant.py
utils/: __init__.py  energy_monitor.py  energy_profiler.py
